--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,20 @@
 server:
-  port: 8009
+  port: 9200
 
 spring:
+  application:
+    name: ws-retail-itemservice
   devtools:
     livereload:
       enabled: true
-#  profiles:
-#    active : DEV
+  #  profiles:
+  #    active : DEV
 
   data:
     mongodb:
-      uri: mongodb://localhost:27018/retailitemservice
+      uri: mongodb://localhost:27017/reach-engine
+      username: root
+      password: rootpassword
+#      authentication-database: reach-engine
       repositories:
         type: AUTO
